ASSIGNED - bug 343: [RESULT] (update) sld editor for tins and vector http://dev.bjoernsen.de/bugzilla/show_bug.cgi?id=343